src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Channel_Partner_Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of additional partner contact for this opportunity</inlineHelpText>
        <label>Channel Partner Secondary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Channel_Partner_Entity__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Inactive_with_current_Account__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Secondary Partner Contact)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <description>Estimated origination fee given to channel partners</description>
        <inlineHelpText>Fee or commission percentage that is based upon the terms of the affiliate agreement.  Either Project Cost or CleanFund Fee.</inlineHelpText>
        <label>Channel Partner Fee</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CleanFund_Fee_Orig_percent__c</fullName>
        <formula>IF(ISPICKVAL(  Channel_Partner_Entity__r.Active_Affiliate_Agreement__r.Affiliate_Fee_Based_On__c , &quot;CleanFund Fee&quot;),
 Total_Financing_Fee__c * (1-Channel_Partner__c), Total_Financing_Fee__c - Channel_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CleanFund Origination Fee normalized to the Project Cost.</inlineHelpText>
        <label>CF Origination Fee (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CleanFund_Financing_Fee__c</fullName>
        <inlineHelpText>The All-In Financing Fee. CF Financing Fee based on Improvement Cost (Est.).</inlineHelpText>
        <label>CF Financing Fee</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CleanQuote_URL__c</fullName>
        <label>CleanQuote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Close_Date_Lead__c</fullName>
        <description>Carryover from Lead record used to populate &quot;Close Date&quot; on Opportunity</description>
        <label>Close Date (Lead)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_City__c</fullName>
        <formula>Property_Owner_Main_Contact__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record for the property owner main contact</inlineHelpText>
        <label>City (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_Name__c</fullName>
        <formula>Property_Owner_Main_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the email of the Property Owner in the contact record.  This will be signer1 on the Third Party Authorization Form.  If this form is blank edit the contact record.</inlineHelpText>
        <label>Email (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_Phone__c</fullName>
        <formula>Property_Owner_Main_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record.</inlineHelpText>
        <label>Phone (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_State__c</fullName>
        <formula>Property_Owner_Main_Contact__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record for the property owner.</inlineHelpText>
        <label>State (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_Street_Address__c</fullName>
        <formula>Property_Owner_Main_Contact__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record for the property owner</inlineHelpText>
        <label>Street Address (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_1_Zip__c</fullName>
        <formula>Property_Owner_Main_Contact__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record for the property owner.</inlineHelpText>
        <label>Zip Code (Property Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_City__c</fullName>
        <formula>Co_Borrower_2__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact record.</inlineHelpText>
        <label>City (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_Email__c</fullName>
        <formula>Co_Borrower_2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the email of the co-borrower.  If it is not set update the contact record.</inlineHelpText>
        <label>Email (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_Phone__c</fullName>
        <formula>Co_Borrower_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact information for the co-borrower</inlineHelpText>
        <label>Phone (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_State__c</fullName>
        <formula>Co_Borrower_2__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_Street_Address__c</fullName>
        <formula>Co_Borrower_2__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2_Zip__c</fullName>
        <formula>Co_Borrower_2__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is blank edit the contact for the Co Borrower 2</inlineHelpText>
        <label>Zip Code (Co-Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is to capture the contact information of multiple borrowers</inlineHelpText>
        <label>Co-Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Co Borrower 2)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_Letter_Sent__c</fullName>
        <inlineHelpText>The date the commitment letter was sent.</inlineHelpText>
        <label>Commitment Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Letter_Signed__c</fullName>
        <inlineHelpText>The date the commitment letter was signed by the property owner.</inlineHelpText>
        <label>CF Commitment Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Guarantee__c</fullName>
        <inlineHelpText>Describe, briefly, whether there&apos;s a completion guarantee. And if so, describe what type, who&apos;s providing, and for how much.</inlineHelpText>
        <label>Completion Guarantee</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Draws__c</fullName>
        <inlineHelpText>Who manages the draws for the construction loan?</inlineHelpText>
        <label>Construction Draws</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Loan_Recourse__c</fullName>
        <inlineHelpText>Specs on repayment and guarantees provided to Lender by Borrower</inlineHelpText>
        <label>Construction Loan Recourse</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Loan_Terms__c</fullName>
        <inlineHelpText>Specifics on the construction loan, including: max percentage amounts, term, extension options, IO period, amort.</inlineHelpText>
        <label>Construction Loan and Structure</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Prepayment_Terms__c</fullName>
        <inlineHelpText>Prepayment schedule for the construction loan</inlineHelpText>
        <label>Construction Prepayment Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Timeline_Adj__c</fullName>
        <inlineHelpText>Apply 10 bps when construction timeline is between 10 to 15 month; 20 bps if construction timeline greater than 16 month. Value input from PACE Calculator.</inlineHelpText>
        <label>Construction Timeline Spread Adj.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Timeline__c</fullName>
        <formula>IF(
  ISPICKVAL(Is_Project_a_Reimbursement__c, &quot;Yes&quot;),
  0,
if(YEAR(Desired_Project_Finish_Date__c) = YEAR(Funding_Date__c), 
MONTH(Desired_Project_Finish_Date__c) - MONTH(Funding_Date__c), 
FLOOR((Desired_Project_Finish_Date__c - Funding_Date__c) / 30.25)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of months between the Funding Date and Project Finish Date (Est).  This will effect project pricing.</inlineHelpText>
        <label>Construction Timeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Work_Status__c</fullName>
        <description>Status of Construction Work for specified Opportunity; provides more granularity to complement the &apos;Stage&apos; field</description>
        <label>Construction Status-Initial Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Building Being Acquired</fullName>
                </value>
                <value>
                    <fullName>Conceptual and Planning Stage</fullName>
                </value>
                <value>
                    <fullName>Energy Analysis / Audit in Progress</fullName>
                </value>
                <value>
                    <fullName>Design in Process</fullName>
                </value>
                <value>
                    <fullName>Scope Identified</fullName>
                </value>
                <value>
                    <fullName>Soliciting Bids</fullName>
                </value>
                <value>
                    <fullName>Contractor Identified</fullName>
                </value>
                <value>
                    <fullName>Scope / Budget Identified</fullName>
                </value>
                <value>
                    <fullName>Permits Pulled</fullName>
                </value>
                <value>
                    <fullName>In Construction</fullName>
                </value>
                <value>
                    <fullName>Construction Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contamination__c</fullName>
        <inlineHelpText>Is there knowledge/evidence of potential or actual environmental contamination at the Property?

Source doc is UW Questionnaire</inlineHelpText>
        <label>Contamination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Certification_Completion_Date__c</fullName>
        <inlineHelpText>Date Project Permitted and Operational</inlineHelpText>
        <label>Project Permitted and Operational Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_to_Bond_Rate__c</fullName>
        <formula>Interest_Rate__c*(Bond_Total__c/ Bond__r.Bond_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there are more than one properties associated with the bond/assignment this is this properties portion of the blended rate..  The bond blended rate will be rolled up at the bond level.</inlineHelpText>
        <label>Contribution to Bond Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Approach_Value__c</fullName>
        <inlineHelpText>This is the value of the Property, based on the &quot;Cost Approach&quot;.</inlineHelpText>
        <label>Cost Approach Value:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Goods_Sold__c</fullName>
        <inlineHelpText>Direct costs attributable to the production of the goods/services sold by a company by year (also known as Cost of Sales)</inlineHelpText>
        <label>Annual Cost of Goods Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Cure__c</fullName>
        <label>Cost to Cure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County where property is located</description>
        <inlineHelpText>County property is located in</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_New_Servicer_Contract__c</fullName>
        <formula>if(Loan_Servicer__c== null,HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;003/e?retURL=/&apos;+Id+&apos;&amp;accid=&apos;+ Loan_Servicer_Company__c+&apos;&amp;saveURL=/&apos;+Id, &apos;Create new loan servicer contact if not already associated with company&apos;),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Loan_Servicer__c,Loan_Servicer__r.FirstName +&apos; &apos;+Loan_Servicer__r.LastName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter new servicer contact here.</inlineHelpText>
        <label>Create New Servicer Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Reducer__c</fullName>
        <inlineHelpText>Eligible when CLTV&lt;75% and LiTV &lt;20% for a 10 bps reducer; CLTV&lt;75% and LiTV &lt;20% for a 15 bps reducer. Value input from PACE Calculator.</inlineHelpText>
        <label>Credit Reducer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Assets__c</fullName>
        <inlineHelpText>Value of all assets that can reasonably expected to be converted into cash within one year (includes cash and cash equivalents, accounts receivable, inventory, marketable securities, prepaid expenses and other liquid assets).</inlineHelpText>
        <label>Current Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance_First_Mortgage__c</fullName>
        <inlineHelpText>The current principal balance of the first mortgage,  as taken from the most recent mortgage servicer&apos;s statement.</inlineHelpText>
        <label>Current Balance (1st)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Second_Mortgage__c</fullName>
        <inlineHelpText>The current principal balance of the second mortgage,  as taken from the most recent mortgage servicer&apos;s statement</inlineHelpText>
        <label>Current Balance (2nd)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Benchmark_As_Of_Date__c</fullName>
        <inlineHelpText>The date the benchmark is tied to.</inlineHelpText>
        <label>Current Benchmark As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Benchmark__c</fullName>
        <inlineHelpText>The benchmark of the like term treasury</inlineHelpText>
        <label>Benchmark at Term Sheet</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Liabilities__c</fullName>
        <inlineHelpText>Debts or obligations due within one year (includes short term debt, accounts payable, accrued liabilities and other debts).</inlineHelpText>
        <label>Current Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Property_Taxes__c</fullName>
        <inlineHelpText>CURRENT PROPERTY TAXES from title report</inlineHelpText>
        <label>Current Property Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Dead_Lost__c</fullName>
        <description>Date Opportunity is declared Dead-Lost</description>
        <label>Date Dead-Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Declared_Dormant__c</fullName>
        <description>Date Opportunity is declared dormant</description>
        <label>Date Declared Dormant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Comment__c</fullName>
        <description>Comment to provide additional color on losing the deal, such as competing interest rate or other facts that can inform our competitiveness.</description>
        <label>Dead-Lost Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Reason__c</fullName>
        <description>Reason Opportunity was declared Dead-Lost</description>
        <label>Dead-Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Fell Through</fullName>
                </value>
                <value>
                    <fullName>Interest Rate and/or Fees</fullName>
                </value>
                <value>
                    <fullName>Building Sold or Pending</fullName>
                </value>
                <value>
                    <fullName>Other PACE Financing Provided</fullName>
                </value>
                <value>
                    <fullName>Bank or Other Financing Provided</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lender Provided Financing</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lender Declined</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t Meet Credit Standards</fullName>
                </value>
                <value>
                    <fullName>No PACE Program</fullName>
                </value>
                <value>
                    <fullName>PACE Program Fault</fullName>
                </value>
                <value>
                    <fullName>Key Personnel Change</fullName>
                </value>
                <value>
                    <fullName>CMBS Servicer</fullName>
                </value>
                <value>
                    <fullName>No Retrofit Pursued</fullName>
                </value>
                <value>
                    <fullName>Owner / Partner Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Self-Financed</fullName>
                </value>
                <value>
                    <fullName>Owner lender concerns</fullName>
                </value>
                <value>
                    <fullName>Capital Provider Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DepositInFunding__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is customer rolling cost of deposit into their PACE financing?</description>
        <inlineHelpText>Defaults to true, uncheck if customer is not rolling cost of deposit into PACE financing</inlineHelpText>
        <label>Is Deposit Financed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_Improvements__c</fullName>
        <inlineHelpText>More detail on improvements.</inlineHelpText>
        <label>Detail of Improvements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Project_Finish_Date__c</fullName>
        <description>Desired construction complete date</description>
        <label>Project Finish Date (Est.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Project_Start_Date__c</fullName>
        <inlineHelpText>Desired construction start date - must occur after close of financing.</inlineHelpText>
        <label>Project Start Date (Est.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Profile__c</fullName>
        <inlineHelpText>Summary of the development group&apos;s experience with this asset type.</inlineHelpText>
        <label>Developer Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dispersment_Sum__c</fullName>
        <inlineHelpText>The sum of disbursements</inlineHelpText>
        <label>Disbursement Sum</label>
        <summarizedField>Disbursement__c.Amount__c</summarizedField>
        <summaryForeignKey>Disbursement__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dormancy_Resolution_Date__c</fullName>
        <description>Date Opportunity is expected to come out of Dormant stage</description>
        <label>Dormancy Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Dill_Timing__c</fullName>
        <inlineHelpText>When is the Due Diligence Deposit collected?</inlineHelpText>
        <label>CF Due Diligence Deposit Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Lender Consent</fullName>
                </value>
                <value>
                    <fullName>After Lender Consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Useful_Life_cost_weighted__c</fullName>
        <inlineHelpText>This represents the effective useful life of all of the Improvements, weighted by the relative dollar cost of each improvement.</inlineHelpText>
        <label>Effective Useful Life (cost weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elec_Consumption_Savings_kWH_yr__c</fullName>
        <inlineHelpText>Electric Consumption Savings (kWh/yr.)</inlineHelpText>
        <label>Elec. Consumption Savings - kWH/yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Utility_and_Rate_Schedule__c</fullName>
        <inlineHelpText>This is the code that the utility has assigned to the Property.</inlineHelpText>
        <label>Electric Utility and Rate Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Loan_Servicer__c</fullName>
        <formula>Loan_Servicer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is empty edit the contact record for the loan servicer</inlineHelpText>
        <label>Email (Loan Servicer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Assessment_Audit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an Energy audit been completed</description>
        <label>Energy Assessment/Audit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Indemnity_In_Place__c</fullName>
        <label>Environmental Indemnity In Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Insurance_In_Place__c</fullName>
        <label>Environmental Insurance In Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Issues__c</fullName>
        <description>This is to help determine if there are any environmental issues.</description>
        <formula>IF(ISPICKVAL( Sensitive_Industries__c , &apos;Yes&apos;) ||
   ISPICKVAL( Hazardous_Substances__c  , &apos;Yes&apos;) ||
   ISPICKVAL(  Contamination__c   , &apos;Yes&apos;) ||
   ISPICKVAL(  Regulatory_Government_Actions__c   , &apos;Yes&apos;) ||
   ISPICKVAL(  Pending_Proceedings_or_Lawsuits__c   , &apos;Yes&apos;) ||
   ISPICKVAL( Hazardous_Substances__c  , &apos;Yes&apos;),
   &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environmental Issues?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Screen_Provider__c</fullName>
        <label>Environmental Screen Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Status_Explanation__c</fullName>
        <description>If “Yes” is answered for the above questions, please provide an explanation and/or reference attached supporting documentation.</description>
        <inlineHelpText>If “Yes” is answered for the above questions, please provide an explanation and/or reference attached supporting documentation.

Source doc is UW Questionaire.</inlineHelpText>
        <label>Environmental Status Explanation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Studies_Performed__c</fullName>
        <inlineHelpText>Type of Environmental Study performed (choose all that apply). List report date(s) below.

Source doc is UW Questionnaire.</inlineHelpText>
        <label>Environmental Studies Performed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSA</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Study_Report_Date__c</fullName>
        <inlineHelpText>Please use the most recent Environmental Studies Report

Source doc is UW Questionnaire.</inlineHelpText>
        <label>Most Recent Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which company will be supplying the equipment for this project?</inlineHelpText>
        <label>Equipment Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Equipment Manufactor)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_Improvement_Cost__c</fullName>
        <description>Estimate of improvement cost, gross of financing and program fees</description>
        <inlineHelpText>Estimated cost of all improvements.</inlineHelpText>
        <label>C-PACE Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_days_to_complete_project__c</fullName>
        <label>Est. days to complete project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Savings__c</fullName>
        <inlineHelpText>The estimated annual savings the energy efficiency projects will create.</inlineHelpText>
        <label>Estimated Annual Savings</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Lenders__c</fullName>
        <inlineHelpText>For Term Sheet purposes.  The number of lenders based on the best information we have at the time.  This will later be updated during the UW process.</inlineHelpText>
        <label>Estimated Number of Lenders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Parcels__c</fullName>
        <inlineHelpText>For purposes of term sheet, represents best knowledge available on parcel count.  For UW purposes a parcel record will be created for each parcel along with other data about the parcel.</inlineHelpText>
        <label>Estimated Number of Parcels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Debt__c</fullName>
        <inlineHelpText>This is an estimation of the total debt for term sheet/calc purposes.  When the opportunity goes into processing there will be lines added to the lien table to outline each lien and associated properties such as lender name.</inlineHelpText>
        <label>Estimated Total Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Utility_Rate_Escalation_yr__c</fullName>
        <inlineHelpText>Estimated annual increase in utility electricity rate.</inlineHelpText>
        <label>Estimated Utility Rate Escalation (%/yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <inlineHelpText>Executive Summary for the Memo</inlineHelpText>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Existing_Phase_II_Report_Completed__c</fullName>
        <label>Existing Phase II Report Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Phase_II_Report_Date__c</fullName>
        <label>Existing Phase II Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Phase_I_Report_Completed__c</fullName>
        <label>Existing Phase I Report Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Phase_I_Report_Date__c</fullName>
        <label>Existing Phase I Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Weighted__c</fullName>
        <description>Expected Revenue Weighted</description>
        <inlineHelpText>Expected Revenue Weighted</inlineHelpText>
        <label>Expected Revenue Weighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_E_Assessed__c</fullName>
        <inlineHelpText>Furniture, Fixtures and Equipment and the Personal Property  from the Tax bill.  
For PACE purposes we cannot include this in the value.</inlineHelpText>
        <label>Assessed FF and E + Personal Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_and_E_As_Complete__c</fullName>
        <inlineHelpText>This is the Furniture Fixtures and Equipment plus Personal Property that is indicated as the &quot;As Complete&quot; value in the appraisal.</inlineHelpText>
        <label>As-Complete FF and E + Personal Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>